cs403/final-project/grammar.txt
program: functionDef optStatements

functionDef: TO VARIABLE optSequence COLON block

optSequence: sequence
	   | *empty*

sequence: expr
	| expr AND expr
	| expr commaChain COMMA AND expr

commaChain: COMMA expr optCommaChain

optCommaChain: COMMA expr commaChain
			 | *empty*

block: optStatements PERIOD

optStatements: statements
			 | *empty*

statements: statement optStatements

statement: expr SEMICOLON
		 | ifStatement
		 | whileStatement
		 | assignment SEMICOLON
		 | TODO

ifStatement: IF booleanExpr COMMA block optOtherwise

whileStatement: WHILE booleanExpr COMMA block

booleanExpr: expr IS boolOp expr

optOtherwise: OTHERWISE block
			| OTHERWISE ifStatement
			| *empty*

assignment: SET variable TO expr

expr: OPEN_PARENTHESIS expr operator expr CLOSE_PARENTHESIS
	| primary
	| functionCall

primary: VARIABLE
	   | NUMBER
	   | STRING
	   | TRUE
	   | FLASE
	   | NOTHING (NULL)

functionCall: CARROT VARIABLE OPEN_PARENTHESIS optSequence CLOSE_PARENTHESIS

operator: PLUS
		| MINUS
		| DIVIDE
		| MULTIPLY

boolOp: DOUBLE_EQUALS
	  | NOT_EQUAL
	  | LESS_THAN
	  | GREATER_THAN
	  | LESS_THAN_EQUAL
	  | GREATER_THAN_EQUAL
